feat: 투표 기능에 선택 이유(description) 추가 (#43)
* feat(poll): 투표 결과에 선택 이유 추가

* feat(poll): 투표에 선택 이유(description) 추가

* refactor(poll): 조회 로직만 있는 경우 readOnly 옵션 추가

* feat(poll): 선택 항목 조회 시 멤버의 선택 여부와 선택 이유 추가

* fix(poll): PollItemResultResponse에서 사용하는 MemberResponse 따로 추가

* refactor(poll): 투표 결과 조회 시 memberId도 받도록 변경

* refactor(poll): 차리, 까라 리뷰 적극 반영

* refactor(poll): 응답 필드에서 사용하던 null을 다른 값으로 변경